# sharedgl

./: CMakeLists.txt  LICENSE  README.md  build_windows.bat  package_linux.sh  package_windows.bat  packge_linux.sh
.github/workflows/: build.yml
inc/: commongl.h  elfhacks.h  sgldebug.h  sharedgl.h
inc/client/: glimpl.h  hook.h  memory.h  pb.h  scratch.h  spinlock.h
inc/client/platform/: gldrv.h  glx.h  icd.h  wgl.h  windrv.h
inc/client/platform/minhook/: MinHook.h
inc/network/: LICENSE  enet.h  net.h  packet.h
inc/server/: context.h  dynarr.h  overlay.h  overlay_font.h  processor.h
inc/sgldxumd/: device.hpp  dxgi.hpp  sgldxumd.hpp
kernel/: install.sh  sharedgl.c
kernel/linux/: Makefile  sharedgl.c  uninstall.sh
kernel/windows/: Device.c  Device.h  Driver.c  Driver.h  Public.h  Queue.c  Queue.h
kernel/windows/findwdk/: FindWdk.cmake
scripts/: kcertify.bat  ksgldrv.inf  wininstall.bat  winuninstall.bat
src/client/: elfhacks.c  glimpl.c  hook.c  main.c  memory.c  pb.c  scratch.c  spinlock.c  winmain.c
src/client/platform/: glx.c  wgl.c  windrv.c
src/network/: net.c
src/server/: context.c  dynarr.c  main.c  overlay.c  processor.c  sgldebug.c
src/sgldxumd/: README.md  adapter.cpp  d3dkmt.cpp  device.cpp  dxgi.cpp  main.cpp
